# 4-PL-Curve-fit-in-Python---numpy-and-scipy

./: 4 PL curvefit.ipynb  4PL_curvefit_2.ipynb  index.html  pyproject.toml
Data/: sample_data.xlsx
