 [build-system]                                                                                                                                                                                          
  requires = ["setuptools>=68"]                                                                                                                                                                           
  build-backend = "setuptools.backends.legacy:build"                                                                                                                                                      
                                                                                                                                                                                                        
  [project]                                                                                                                                                                                               
  name = "4pl-curvefit"                                                                                                                                                                                 
  version = "0.1.0"                                                                                                                                                                                       
  description = "4-Parameter Logistic (4PL) curve fitting using NumPy and SciPy"                                                                                                                          
  requires-python = ">=3.9"                                                                                                                                                                               
                                                                                                                                                                                                        
  dependencies = [                                                                                                                                                                                        
      "numpy>=1.24",                                                                                                                                                                                    
      "scipy>=1.10",
      "pandas>=2.0",
      "matplotlib>=3.7",                                                                                                                                                                                  
      "openpyxl>=3.1",      # needed for pd.read_excel on .xlsx files
  ]                                                                                                                                                                                                       
                                                                                                                                                                                                        
  [project.optional-dependencies]                                                                                                                                                                         
  dev = [                                                                                                                                                                                               
      "jupyter>=1.0",
      "notebook>=7.0",
  ]
